--- a/src/server/add-light/add-flight-style.css
+++ b/src/server/add-light/add-flight-style.css
@@ -6,7 +6,7 @@
         justify-content: center;
         
         align-items: center;
-        background-color: purple;
+        background-color: lightpink;
 }
 .inputs{
     padding-left: 30px;
@@ -17,3 +17,5 @@
     margin-top: 10px;
     padding: 15px;
 }
+
+
